--- a/Web-App/static/home.css
+++ b/Web-App/static/home.css
@@ -66,7 +66,7 @@ h1 {
   color: #4f5858;
 }
 
-.add-pet-btn, .search-pet-btn, .change-password-btn, .delete-account-btn {
+.add-pet-btn, .search-pet-btn, .change-password-btn, .delete-account-btn, .logout-btn {
   display: block;
   width: 200px;
   margin: 5px auto;
