--- a/Web-App/templates/search.html
+++ b/Web-App/templates/search.html
@@ -53,6 +53,8 @@
     padding: 10px;
     width: calc(100% - 20px);
     max-width: 250px;
+    border: 2px solid;
+    border-color: #c0c0c0;
   }
 
   .pet-card:hover {
@@ -90,20 +92,20 @@
   color: #4f5858;
 }
 
-  .view-pet-btn {
-    display: block;
-    width: 80%;
-    margin: 5px auto;
-    padding: 10px;
-    background-color: #3498db;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bolder;
-    border: 2px solid;
-    border-color: #0f0f0f;
-  }
+.view-pet-btn {
+  display: block;
+  width: 80%;
+  margin: 5px auto;
+  padding: 10px;
+  background-color: #3498db;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bolder;
+  border: 2px solid;
+  border-color: #0f0f0f;
+}
 
   .slider-container {
   position: relative;
