--- a/Web-App/static/home.css
+++ b/Web-App/static/home.css
@@ -43,6 +43,8 @@ h1 {
   height: 250px;
   object-fit: cover;
   border-radius: 8px;
+  border: 2px solid;
+  border-color: #c0c0c0;
 }
 
 .pet-info {
